Redirect from ev -> extended validation

--- a/domains/cert/extended-validation.conf
+++ b/domains/cert/extended-validation.conf
@@ -17,3 +17,22 @@ server {
 
   root {{ site.serving-path }}/domains/cert/extended-validation;
 }
+
+# Redirect from ev -> extended-validation
+server {
+  listen 80;
+  server_name ev.{{ site.domain }};
+
+  return 301 http://extended-validation.{{ site.domain }}$request_uri;
+}
+
+server {
+  listen 443;
+  server_name ev.{{ site.domain }};
+
+  include {{ site.serving-path }}/nginx-includes/wildcard-normal.conf;
+  include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
+  include {{ site.serving-path }}/common/common.conf;
+
+  return 301 https://extended-validation.{{ site.domain }}$request_uri;
+}
