Slight tweaks to redirection order

--- a/domains/cert/extended-validation.conf
+++ b/domains/cert/extended-validation.conf
@@ -23,7 +23,7 @@ server {
   listen 80;
   server_name ev.{{ site.domain }};
 
-  return 301 http://extended-validation.{{ site.domain }}$request_uri;
+  return 301 https://ev.{{ site.domain }}$request_uri;
 }
 
 server {
