--- a/certs/src/conf/subdomain-extended-validation.conf
+++ b/certs/src/conf/subdomain-extended-validation.conf
@@ -9,8 +9,8 @@ certificatePolicies = @policy
 [ req_distinguished_name ]
 countryName         = US
 stateOrProvinceName = California
-localityName        = San Francisco
-organizationName    = BadSSL
+localityName        = Mountain View
+organizationName    = Mozilla Corporation
 commonName          = extended-validation.__DOMAIN__
 
 [ req_v3_usr ]
