--- a/certs/Makefile
+++ b/certs/Makefile
@@ -120,6 +120,15 @@ $(O)/gen/chain/wildcard-incomplete-chain.pem: $(O)/gen/crt/wildcard-main.crt
 	./tool chain $@ $(D) $^
 
 ################################
+$(O)/gen/csr/subdomain-disorderly-chain.csr: src/conf/subdomain-disorderly-chain.conf $(O)/gen/key/leaf-main.key
+	./tool gen-csr $@ $(D) $^
+$(O)/gen/crt/subdomain-disorderly-chain.crt: src/conf/subdomain-disorderly-chain.conf $(O)/gen/csr/subdomain-disorderly-chain.csr $(O)/gen/key/ca-intermediate.key $(O)/gen/crt/ca-intermediate.crt
+	./tool sign $@ $(D) $(SIGN_LEAF_DEFAULTS) $^
+CHAINS_PROD += $(O)/gen/chain/subdomain-disorderly-chain.pem
+$(O)/gen/chain/subdomain-disorderly-chain.pem: $(O)/gen/crt/ca-intermediate.crt $(O)/gen/crt/subdomain-disorderly-chain.crt
+	./tool chain $@ $(D) $^
+
+################################
 $(O)/gen/crt/wildcard-sha1-2016.crt: src/conf/wildcard.conf $(O)/gen/csr/wildcard-main.csr $(O)/gen/key/ca-intermediate.key $(O)/gen/crt/ca-intermediate.crt
 	# TODO: date calculations
 	./tool sign $@ $(D) 10 sha1 req_v3_usr $^
