Create a "client-nopass.pem" for use with Python requests, and add it to the download page.
Partly addresses #369.
Using a passphrase other than "badssl.com" for the other files would also be great,
but is a larger change, I think.

--- a/certs/Makefile
+++ b/certs/Makefile
@@ -73,7 +73,10 @@ $(O)/gen/crt/client.p12: $(O)/gen/crt/client.crt $(O)/gen/key/client.key
 	./tool gen-pkcs12-p12 $@ $(D) $^
 $(O)/gen/crt/client.pem: $(O)/gen/crt/client.p12
 	./tool pkcs12-convert-p12-pem $@ $(D) $^
+$(O)/gen/crt/client-nopass.pem: $(O)/gen/crt/client.p12
+	./tool pkcs12-convert-p12-pem-nopass $@ $(D) $^
 CHAINS_PROD += $(O)/gen/crt/client.pem
+CHAINS_PROD += $(O)/gen/crt/client-nopass.pem
 
 ################################
 $(O)/gen/key/ca-untrusted-root.key:
