--- a/certs/src/conf/subdomain-reversed-chain.conf
+++ b/certs/src/conf/subdomain-reversed-chain.conf
@@ -10,11 +10,11 @@ countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
 organizationName    = BadSSL
-commonName          = reverse-chain.__DOMAIN__
+commonName          = reversed-chain.__DOMAIN__
 
 [ req_v3_usr ]
 basicConstraints = CA:FALSE
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = reverse-chain.__DOMAIN__
+DNS.1 = reversed-chain.__DOMAIN__
