Provide a subdomain with a reversed certificate chain (#443)
* Change Ruby version to 2.4

Jekyll requires Ruby 2.4. Update Dockerfile to include it per comment by @shawn-lo on #405 .

* Do not run `docker-run` before `docker-build` or `certs-test` have concluded

* Provide a subdomain with a disorderly certificate chain

* Improve naming of misorderly certificate chain

Rename it from disorderly certificate chain, as suggested by lgarron.

* Improve naming of reverse certificate chain

Ideally, a misorderly chain would leverage 3 or more certificates; since
there may be some obstacles to doing so with the live website,
simplify the expectations of our use case by renaming it to reverse
certificate chain.

* Fix typo in naming of reversed certificate chain

It's _reversed_ rather than reverse.

Co-authored-by: Brad <brad.haas@gmail.com>

--- a/certs/Makefile
+++ b/certs/Makefile
@@ -120,6 +120,15 @@ $(O)/gen/chain/wildcard-incomplete-chain.pem: $(O)/gen/crt/wildcard-main.crt
 	./tool chain $@ $(D) $^
 
 ################################
+$(O)/gen/csr/subdomain-reversed-chain.csr: src/conf/subdomain-reversed-chain.conf $(O)/gen/key/leaf-main.key
+	./tool gen-csr $@ $(D) $^
+$(O)/gen/crt/subdomain-reversed-chain.crt: src/conf/subdomain-reversed-chain.conf $(O)/gen/csr/subdomain-reversed-chain.csr $(O)/gen/key/ca-intermediate.key $(O)/gen/crt/ca-intermediate.crt
+	./tool sign $@ $(D) $(SIGN_LEAF_DEFAULTS) $^
+CHAINS_PROD += $(O)/gen/chain/subdomain-reversed-chain.pem
+$(O)/gen/chain/subdomain-reversed-chain.pem: $(O)/gen/crt/ca-intermediate.crt $(O)/gen/crt/subdomain-reversed-chain.crt
+	./tool chain $@ $(D) $^
+
+################################
 $(O)/gen/crt/wildcard-sha1-2016.crt: src/conf/wildcard.conf $(O)/gen/csr/wildcard-main.csr $(O)/gen/key/ca-intermediate.key $(O)/gen/crt/ca-intermediate.crt
 	# TODO: date calculations
 	./tool sign $@ $(D) 10 sha1 req_v3_usr $^
