Add missing semicolons

--- a/nginx-includes/tls-sha1-signature.conf
+++ b/nginx-includes/tls-sha1-signature.conf
@@ -7,4 +7,4 @@ ssl_session_timeout 5m;
 ssl_protocols TLSv1.2;
 ssl_ciphers 'ECDSA+AESGCM:ECDHE:!RC4:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK';
 ssl_prefer_server_ciphers on;
-ssl_conf_command SignatureAlgorithms RSA+SHA1
+ssl_conf_command SignatureAlgorithms RSA+SHA1;
